[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/items/items_hub.png" type="Texture" id=1]
[ext_resource path="res://entities/items/battery/battery.gd" type="Script" id=2]
[ext_resource path="res://assets/sounds/items/Pegando_o_item.ogg" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 21 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "battery",
"speed": 5.0
} ]

[node name="Battery" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 2 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 4, 11 )
shape = SubResource( 1 )

[node name="Animated" type="AnimatedSprite" parent="."]
frames = SubResource( 3 )
animation = "battery"

[node name="ColletedFX" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[connection signal="body_entered" from="." to="." method="_on_Battery_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Battery_body_exited"]
[connection signal="finished" from="ColletedFX" to="." method="_on_ColletedFX_finished"]
